Exercicio de css com html

--- a/modulo1/html-sistema-loja/template-loja/add-produto.html
+++ b/modulo1/html-sistema-loja/template-loja/add-produto.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Adicionar Produto</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
-        <p>Cantina da Nym</p>
+        <h1>Cantina da Nym</h1>
     </header>
     
     <nav>
@@ -44,5 +46,11 @@
 
     </form>
 
+    <footer>
+        <p>Siga-nos nas redes sociais!</p>
+        <img class="facebook" src="./img/facebook.webp"/>
+        <img class="instagram" src="./img/insta.jpg"/>
+        <img class="twitter" src="./img/twitter.png"/>
+    </footer>
 </body>
 </html>
