--- a/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
+++ b/modulo1/html-sistema-loja/template-loja/ctrl-estoque.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Controle de Estoque</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
-        <p>Cantina da Nym</p>
+        <h1>Cantina da Nym</h1>
     </header>
     
     <nav>
@@ -29,28 +31,28 @@
         </tr>
 
         <tr>
-            <td><img src="../template-loja/img/coxinha.jpg" alt="Coxinha"/></td>
+            <td><img class="coxinha" src="../template-loja/img/coxinha.jpg" alt="Coxinha"/></td>
             <td> Coxinha </td>
             <td> 2,5 </td>
             <td> 5 </td>
         </tr>
 
         <tr>
-            <td><img src="../template-loja/img/assado.jpg" alt="assado"/></td>
+            <td><img class="assado" src="../template-loja/img/assado.jpg" alt="assado"/></td>
             <td> Assado </td>
             <td> 3 </td>
             <td> 6 </td>
         </tr>
 
         <tr>
-            <td><img src="../template-loja/img/bombom.jpg" alt="bombom"/></td>
+            <td><img class="bombom" src="../template-loja/img/bombom.jpg" alt="bombom"/></td>
             <td> Bombom </td>
             <td> 10 </td>
             <td> 15 </td>
         </tr>
 
         <tr>
-            <td><img src="../template-loja/img/salsicha.jpg" alt="enrolado salsicha"/></td>
+            <td><img class="salsicha" src="../template-loja/img/salsicha.jpg" alt="enrolado salsicha"/></td>
             <td> Enrolado salsicha </td>
             <td> 2,75 </td>
             <td> 7 </td>
@@ -58,7 +60,7 @@
         <!-- Crie mais uma linha desta tabela abaixo \/ -->
 
         <tr>
-            <td><img src="../template-loja/img/empada.jpg" alt="Empada"/></td>
+            <td><img class="empada" src="../template-loja/img/empada.jpg" alt="Empada"/></td>
             <td> Empada </td>
             <td> 4 </td>
             <td> 8 </td>
@@ -67,5 +69,11 @@
         
     </table>
 
+    <footer class="rodape">
+        <p>Siga-nos nas redes sociais!</p>
+        <img class="facebook" src="./img/facebook.webp"/>
+        <img class="instagram" src="./img/insta.jpg"/>
+        <img class="twitter" src="./img/twitter.png"/>
+    </footer>
 </body>
 </html>
