--- a/modulo1/projeto-portfolio/portfolio.html
+++ b/modulo1/projeto-portfolio/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
-    
+    <header>
     <nav>
         <a href="index.html"> Início </a>
         <a href="instituicoes.html"> Instituições</a>
@@ -16,6 +16,29 @@
         <a href="Links.html">Links</a>
         <a href="contato.html">Contato</a>
     </nav>
+</header>
+
+<main>
+    <section>
+        <div>
+            <h2>Blackjack</h2>
+            <a href="blackjack.html"><img class="black" src="./imagens/blackjack.png" alt="projeto blackjack">
+            </a>
+        </div>
+    </section>
+</main>
+
+<main>
+    <section >
+        <div >
+            <h2>Projeto Loja</h2>
+          <a href="template-loja1.html"><img class="loja" src="./imagens/lojinha inicio(1).png" alt="codigo 1">
+          </a>
+        </div>
+    </section>
+</main>
+
+
 
    
 </body>
