--- a/modulo1/projeto-portfolio/Links.html
+++ b/modulo1/projeto-portfolio/Links.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Links.css">
 </head>
 <body>
+    <header>
     <nav>
         <a href="index.html"> Início </a>
         <a href="instituicoes.html"> Instituições</a>
@@ -15,6 +16,14 @@
         <a href="Links.html">Links</a>
         <a href="contato.html">Contato</a>
     </nav>
+</header>
+<br><br>
+
+   <a href="https://www.facebook.com/jessicaestevam1992/"> <img class="facelogo" src="./imagens/facebook-13.png" alt=""></a><br>
+   <a href="https://www.instagram.com/mmundoempag/"><img class="insta" src="./imagens/Instagram_icon.png.webp" alt="instagram"></a><br>
+    <a href="https://github.com/Nymeria9212"> <img class="github" src="./imagens/github.png" alt="github"></a><br>
+    <a href="https://www.linkedin.com/in/j%C3%A9ssica-pereira-estevam-011581188/"><img class="linkedin" src="./imagens/linkedin.jpg" alt=""></a><br>
+    <a href="https://twitter.com/mmundoempag"><img class="twiter" src="./imagens/twitter.jpg" alt=""></a>
 
 </body>
 </html>
