--- a/modulo1/projeto-portfolio/contato.html
+++ b/modulo1/projeto-portfolio/contato.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="contato.css">
 </head>
 <body>
-    
+    <header>
     <nav>
         <a href="index.html"> Início </a>
         <a href="instituicoes.html"> Instituições</a>
@@ -16,6 +16,22 @@
         <a href="Links.html">Links</a>
         <a href="contato.html">Contato</a>
     </nav>
+</header>
+<br>
+    <form action="#">
+        <label for="nome">Nome: </label>
+            <input type="text" id="nome" name="nome" size="30">
+            <br>
+            <label for="email">Email: </label>
+            <input type="text" id="imail" name="email" size="30">
+            <br>
+            <label class="mensagem" for="mensagem">Mensagem: </label><br>
+            <textarea name="mensagem" id="mensagem" cols="40" rows="6"></textarea>
+            <br>
+
+            <br>
+            <button type="submit">Enviar</button>
+    </form>
 
 </body>
 </html>
